Fixing problem with error label, now is align with the rest of the controls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,8 +177,7 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
 .error {
     color: #b00;
     text-align: left;
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
 }
 
 .error p {
@@ -334,10 +333,6 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
 @media (min-width: 768px) {
     .login-image img{
         width: 55%;
-    }
-    
-    .error {
-        width: 60%;
     }
 
     .static-content #api {
